--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,46 @@
+body {
+    background-color: rgb(229, 233, 178);
+    font-family: monospace;
+}
 
+h1 {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 5px; 
+    justify-content: center;
+    
+}
+li {
+    border: 1px solid #000000;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    background: #f9f9f9;
+    border-radius: 8px;
+    width:85%;
+    height: 150px;
+    
+}
+img {
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #333;
+}
+
+@media screen and (min-width: 800px){
+
+    li {
+        width:40%;
+    }
+
+}
