--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,6 @@ body {
 header img {
     width: 99%;
     object-fit: cover;
-    border: 2px solid black;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +16,7 @@ header img {
     text-align: center;
     margin-top: 10px;
     font-size:20px;
-    border-bottom: 2px solid rgb(0, 0, 0);
+    border-bottom: 2px solid black;
     padding-bottom: 20px;
     
 }
@@ -30,12 +29,13 @@ header img {
     padding: 5px;
     background-color: #e6e3e3;
     transition: .2s;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3), 0 3px 10px 0 rgba(0, 0, 0, 0.29);
 }
 
 .topnav a:hover {
     transition: .2s;
     border:1px solid rgb(212, 203, 38);
-    background-color: #262626;
+    background-color: #585858;
     color:white
     
 }
@@ -43,15 +43,37 @@ header img {
 .batman h1 {
     text-align: center;
     font-size: 30px;
+    text-shadow: 2px 2px 3px #000000;
+    color:rgb(255, 247, 98)
 }
 .batman img {
-    width:30%;
+    width:50%;
     height:auto;
+    margin-left: auto;
+    margin-right:auto;
+    margin-top: 40px;
+    border: 4px solid rgb(255, 247, 98);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
 }
+
+.about-batman {
+    display:flex;
+    gap: 10px;
+    flex-direction: column;
+    padding-left: 35px;
+    padding-right:35px;
+}
+
+.about-batman p{
+    font-size: 14px;
+}
+
 
 .characters h1 {
     text-align: center;
     font-size: 30px;
+    text-shadow: 2px 2px 3px #000000;
+    color:rgb(255, 247, 98)
 }
 
 #character-list {
@@ -74,7 +96,6 @@ header img {
     width:85%;
     min-height: 20%;
     max-height: 20%;
-    
 }
 #character-list li img {
     width: 90px;
@@ -100,20 +121,62 @@ header img {
     font-size: 16px;
     border-radius: 50px;
     transition: .2s;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3), 0 3px 10px 0 rgba(0, 0, 0, 0.29);
 }
 
 #toggle-btn:hover {
-    background-color: #262626;
+    background-color: #b3b3b3;
     color: white;
     transition: .2s;
 }
 
 footer {
-    text-align: center;
-    background-color: #e6e3e3;
-    padding: 15px;
-    border: 2px solid black;
+    margin-top:15px;
+    background-color: #b3b3b3;
+    color: black;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+.logo {
+    display:none;
 }
+
+  .footer-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 35px;
+    padding-right:35px;
+    gap:10px;
+  }
+
+  .footer-nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 25px;
+
+  }
+
+  .footer-nav a {
+    color: black;
+    text-decoration: none;
+  }
+
+  .social-icons {
+    display: flex;
+    gap: 20px;
+  }
+
+  .social-icons img {
+    width: 42px;
+    height: 42px;
+  }
 
 @media screen and (min-width: 800px){
 
@@ -121,4 +184,31 @@ footer {
         width:40%;
     }
 
+    .about-batman {
+        flex-direction: row;
+        padding-left: 100px;
+        padding-right:100px;
+        gap: 30px;
+    }
+
+    .batman img{
+        width:300px;
+        height:475px;
+    }
+
+    .about-batman p{
+        font-size: 17px;
+    }
+
+    .footer-content {
+        padding-left: 70px;
+        padding-right:70px;
+        flex-direction: row;
+    }
+
+    .logo {
+        display:inline;
+        width: 200px;
+        height: auto;
+    }
 }
