--- a/styles/comics.css
+++ b/styles/comics.css
@@ -1,15 +1,98 @@
-@import "style.css";
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: silver;
+    font-family: ;
+}
+
+
+
+
+/*HEADER*/
+header{
+
+}
+
+header img {
+    width: 100%;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #1C1F42;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+    font-size: 20px;
+    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+nav a:hover{
+    color: #FFCC33;
+    transform: scale(1.1);
+}
+
+#darkModeToggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 5px 10px;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.dark-mode nav {
+    background-color: #3D3D3D;
+}
+
+.dark-mode nav a {
+    color: gold;
+}
+
+.dark-mode nav a:hover{
+    color: white;
+}
+
+
+
+
+/*MAIN*/
+main{
+    padding: 40px;
+
+}
 
 h1{
-    font-size: 50px;
+    text-align: center;
+    font-size: 40px;
 }
 
 h2{
-    font-size: 30px;
-}
-
-h1, h2{
     text-align: center;
+    padding: 20px;
+    font-size: 20px;
 }
 
 #comics-container {
@@ -21,9 +104,9 @@ h1, h2{
 }
 
 .comic-item {
-    background-color: rgb(177, 177, 177);
+    background: #FFCC33;
     padding: 15px;
-    border: 1px solid #ccc;
+    border: 3px solid darkgoldenrod;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
