--- a/styles/base.css
+++ b/styles/base.css
@@ -1,1 +1,6 @@
-
+@import "partials/footer.css";
+@import "partials/header.css";
+@import "partials/global.css";
+@import "partials/variables.css";
+@import "partials/home.css";
+@import "partials/darkmode.css";
