--- a/styles/partials/darkmode.css
+++ b/styles/partials/darkmode.css
@@ -64,7 +64,6 @@ body.dark-mode {
 .dark-mode .feedback-content {
     background-color: #1C1F42;
     color: white;
-    border: 2px solid #ffeb3b;
 }
 
 .dark-mode #character-list li {
@@ -110,10 +109,10 @@ body.dark-mode {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 
-.dark-mode .other-pages div a {
+.dark-mode .other-pages a div{
     color: rgb(255, 247, 98);
 }
 
-.dark-mode .other-pages div a:hover {
+.dark-mode .other-pages a div:hover {
     color: silver;
 }
