--- a/styles/partials/darkmode.css
+++ b/styles/partials/darkmode.css
@@ -27,21 +27,29 @@
 }
 
 .dark-mode .batman {
-    background: linear-gradient(to bottom, #000, #1C1F42);
+    background: black;
 }
 
 .dark-mode .about-batman {
     background: rgba(255, 255, 255, 0.1);
-    color: rgb(255, 247, 98);
+    color: white;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+    border: 3px solid gray;
 }
 
+.dark-mode .about-batman img {
+    border: 3px solid gray;
+}
 .dark-mode .batman h1 {
-    color: #ffeb3b;
+    color: white;
+}
+
+.dark-mode .characters h1 {
+    color:white;
 }
 
 body.dark-mode {
-    background-color: #242424;
+    background-color: black;
     color: #e6e6e6;
 }
 
@@ -62,23 +70,40 @@ body.dark-mode {
 }
 
 .dark-mode .feedback-content {
-    background-color: #1C1F42;
+    background-color: black;
     color: white;
+    border: 3px solid gray;
+}
+
+.dark-mode .close-btn {
+    color:white;
+}
+
+.dark-mode .close-btn:hover {
+    color:gray;
+}
+
+.dark-mode .feedback-content label {
+    color:white;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.8)
 }
 
 .dark-mode #character-list li {
     background: #1f1f1f;
     color: white;
-    border: 1px solid #ffeb3b;
+    border: 2px solid gray;
 }
 
-.dark-mode #character-list li img {
+.dark-mode #character-list li:hover {
+    background: #1f1f1f;
+    color: white;
     border: 2px solid #ffeb3b;
 }
 
-.dark-mode #character-list li img:hover {
-    opacity: 0.8;
+.dark-mode #character-list li img {
+    border: 2px solid gray;
 }
+
 
 .dark-mode footer {
     background-color: #646464;
@@ -100,7 +125,7 @@ body.dark-mode {
 }
 
 .dark-mode .other-pages {
-    background: linear-gradient(to bottom, #000, #1C1F42);
+    background: black;
 }
 
 .dark-mode .other-pages div {
@@ -109,10 +134,17 @@ body.dark-mode {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 
+.dark-mode .other-pages div:hover {
+    border: 3px solid #ffeb3b;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+
 .dark-mode .other-pages a div{
-    color: rgb(255, 247, 98);
+    color: white;
+    border: 3px solid gray;
 }
 
 .dark-mode .other-pages a div:hover {
-    color: silver;
+    color:white;
 }
