--- a/styles/comics.css
+++ b/styles/comics.css
@@ -115,7 +115,7 @@ h2{
 }
 
 .comic-image {
-    width: 100%;
+    width: 220px;
     height: auto;
     border-radius: 5px;
     margin-bottom: 10px;
