--- a/styles/comics.css
+++ b/styles/comics.css
@@ -1,77 +1,14 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: silver;
-    font-family: "Oswald", sans-serif;
-}
+@import "partials/footer.css";
+@import "partials/header.css";
+@import "partials/global.css";
+@import "partials/variables.css";
+@import "partials/home.css";
+@import "partials/dark-mode.css";
 
 
 
 
-/*HEADER*/
-header img {
-    width: 100%;
-    object-fit: cover;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
 
-
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #1C1F42;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    padding: 15px;
-    font-size: 20px;
-    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
-}
-nav a:hover{
-    color: #FFCC33;
-    transform: scale(1.1);
-}
-
-#darkModeToggle {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    padding: 5px 10px;
-}
-
-.dark-mode {
-    background-color: black;
-    color: white;
-}
-
-.dark-mode nav {
-    background-color: #3D3D3D;
-}
-
-.dark-mode nav a {
-    color: gold;
-}
-
-.dark-mode nav a:hover{
-    color: white;
-}
 
 
 
@@ -135,24 +72,10 @@ h1, h2{
     font-family: "Russo One", sans-serif;
 }
 
-/*Footer*/
-footer {
-    background-color: #1C1F42;
-    color: white;
-    padding: 20px;
-    
-}
 
-footer p{
-    text-align: center;
-    font-size: 20px;
-
-}
-
-.dark-mode footer{
-    background-color: #3D3D3D;
-}
-
-.dark-mode footer p{
-    color: gold;
+@media screen and (min-width: 768px){
+    .footer-content {
+        flex-direction: row;
+        
+    }
 }
