--- a/styles/adaptations.css
+++ b/styles/adaptations.css
@@ -1,3 +1,6 @@
+@import "partials/header.css";
+@import "partials/dark-mode.css";
+
 *{
     margin: 0;
     padding: 0;
@@ -11,80 +14,13 @@ body{
 
 
 
-/*HEADER*/
-header img {
-    width: 100%;
-    object-fit: cover;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #1C1F42;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    padding: 15px;
-    font-size: 20px;
-    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
-}
-nav a:hover{
-    color: #FFCC33;
-    transform: scale(1.1);
-}
-
-
-
-#darkModeToggle {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 20px;
-    padding: 5px 10px;
-}
-
-.dark-mode {
-    background-color: black;
-    color: white;
-}
-
-.dark-mode nav {
-    background-color: #3D3D3D;
-}
-
-.dark-mode nav a {
-    color: gold;
-}
-
-.dark-mode nav a:hover{
-    color: white;
-}
-
-
-
-
 /*MAIN*/
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    padding: 2rem;
+    padding-bottom: 185px;
 }
 
 main h1{
@@ -121,7 +57,6 @@ section p{
 }
 
 
-
 #movies-container, #shows-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -145,47 +80,30 @@ main p{
 /*Show More button*/
 .show-more-btn {
     display: none;
+    font-family: "Oswald", sans-serif;
     margin: 1rem auto;
     padding: 0.5rem 1.5rem;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
-    background:#444;
+    background: #1C1F42;
     color: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    font-family: 'Oswald', sans-serif;
 }
 
 .show-more-btn:hover {
-    text-decoration: underline;
-    transform: scale(1.2);
-    background-color: black;
-    color: #FFCC33;
+    color: gold;
 }
 
 body.dark-mode .show-more-btn {
-    color: black;
-    background: #FFCC33;
+    color: gold;
+    background: black;
 }
 
 body.dark-mode .show-more-btn:hover {
-    background-color: white;
-    color: black
-}
-
-
-
-/*Dark Mode*/
-.dark-mode{
-    background: black;
-    border-color: #666;
-}
-
-.dark-mode section {
-    background: #444;
-    border-color: #666;
+    color: white
 }
 
 /*Fonts*/
@@ -195,13 +113,14 @@ h1, h2{
 
 /*CSS animation*/
 .bat-signal {
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    height: 700px;
     background-image: url('https://www.pngmart.com/files/23/Batman-Logo-PNG-Isolated-Image.png'); /* Replace with your image path */
     background-size: cover;
     animation-name: fadeInOut;
     animation-duration: 7s;
     animation-iteration-count: infinite;
+    padding-top: 1px;
 }
   
 @keyframes fadeInOut {
@@ -226,14 +145,6 @@ footer p{
     text-align: center;
     font-size: 20px;
 
-}
-
-.dark-mode footer{
-    background-color: #3D3D3D;
-}
-
-.dark-mode footer p{
-    color: gold;
 }
 
 .footer-content {
@@ -271,11 +182,19 @@ footer p{
     h1 {
         font-size: 24px;
     }
+    
     #movies-container, #shows-container {
         grid-template-columns: repeat(2, 1fr);
     }
+    
     #movies-container img, #shows-container img {
         width: 95%;
+        height: auto;
+    }
+
+    .bat-signal{
+        width: 400px;
+        height: 400px;
     }
 }
 
@@ -308,6 +227,11 @@ footer p{
         grid-template-columns: 1fr;
     }
     #movies-container img, #shows-container img {
-        width: 70%;
+        width: 75%;
+    }
+
+    .bat-signal{
+        width: 300px;
+        height: 300px;
     }
 }
