--- a/styles/adaptations.css
+++ b/styles/adaptations.css
@@ -26,6 +26,7 @@ main {
 main h1{
     text-align: center;
     font-size: 35px;
+    padding-top: 30px;
 }
 
 
@@ -179,6 +180,11 @@ footer p{
 }
 
 @media (max-width: 768px) { /* For tablets & phones */
+    .btn-modal, #darkModeToggle{
+        font-size: 25px;
+        line-height: 60px;
+    }
+
     h1 {
         font-size: 24px;
     }
