added aria-labels for better accessibility score and made a few corrections

--- a/styles/adaptations.css
+++ b/styles/adaptations.css
@@ -1,5 +1,8 @@
-<<<<<<< HEAD
+@import "partials/footer.css";
 @import "partials/header.css";
+@import "partials/global.css";
+@import "partials/variables.css";
+@import "partials/home.css";
 @import "partials/dark-mode.css";
 
 *{
@@ -12,17 +15,6 @@ body{
     font-family: "Oswald", sans-serif;
 }
 
-
-
-=======
-@import "partials/footer.css";
-@import "partials/header.css";
-@import "partials/global.css";
-@import "partials/variables.css";
-@import "partials/home.css";
-@import "partials/dark-mode.css";
-
->>>>>>> dc0eed1ad83144c7530ed8ae7b5b9a9fe98a0136
 
 /*MAIN*/
 main {
@@ -133,6 +125,11 @@ h1, h2{
     animation-iteration-count: infinite;
     padding-top: 1px;
 }
+
+.bat-signal:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+}
   
 @keyframes fadeInOut {
     0% { opacity: 1; }
@@ -140,53 +137,13 @@ h1, h2{
     100% { opacity: 1; }
 }
   
-
+/*Media Query*/
 @media screen and (min-width: 768px){
     .footer-content {
         flex-direction: row;
         
     }
 }
-
-<<<<<<< HEAD
-footer p{
-    text-align: center;
-    font-size: 20px;
-
-}
-
-.footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Distributes items across the row */
-    text-align: center;
-}
-
-.logo {
-    height: 50px;
-}
-
-.footer-text {
-    flex-grow: 1; /* Allows the text to expand and center itself */
-    text-align: center;
-}
-
-.social-icons {
-    display: flex;
-    gap: 10px; /* Adds space between icons */
-}
-
-.social-icons img {
-    width: 40px;
-    height: 40px;
-    transition: transform 0.3s ease;
-}
-
-.social-icons img:hover {
-    transform: scale(1.1);
-}
-=======
->>>>>>> dc0eed1ad83144c7530ed8ae7b5b9a9fe98a0136
 
 @media (max-width: 768px) { /* For tablets & phones */
     .btn-modal, #darkModeToggle{
